--- a/service-page-5.html
+++ b/service-page-5.html
@@ -118,7 +118,7 @@
 								<td>Ресницы</td>
 								<td>1500</td>
 								<td>
-									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+									<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_2 mx-auto">
 										<span class="f_08 light-gray">Записаться</span>
 									</button>
 								</td>
@@ -127,7 +127,7 @@
 								<td>Ресницы + ботокс</td>
 								<td>1700</td>
 								<td>
-									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+									<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_2 mx-auto">
 										<span class="f_08 light-gray">Записаться</span>
 									</button>
 								</td>
@@ -135,9 +135,9 @@
 						</tbody>
 					</table>
 				</div>
-				<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+				<a href="team.html" class="btn_main btn_sm btn_1 mx-auto">
 					<span class="f_09">Мастера</span>
-				</button>
+				</a>
 				<hr size="2" class="my-5">
 
 				<div class="font-2 fw_7 f_12 text-center mb-4">Мастера  по окрашиванию</div>
@@ -145,41 +145,9 @@
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="master">
-								<img src="img/team/1.png">
+								<img src="img/team/5.png">
 								<div class="p-2 p-md-4">
-									<div class="font-2 f_12 fw_6 mb-md-2"><a href="#">Елена</a></div>
-									<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
-									<div class="rating justify-content-center mb-2 mb-md-3">
-										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-										</svg>
-										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-										</svg>
-										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-										</svg>
-										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-										</svg>
-										<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-										</svg>
-									</div>
-									<a href="#" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-										<span class="f_08 light-gray">о мастере</span>
-									</a>
-									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-										<span class="f_08">Записаться</span>
-									</button>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="master">
-								<img src="img/team/4.png">
-								<div class="p-2 p-md-4">
-									<div class="font-2 f_12 fw_6 mb-md-2">Анастасия</div>
+									<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-1.html">Максим Жданов</a></div>
 									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
 									<div class="rating justify-content-center mb-2 mb-md-3">
 										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -198,10 +166,10 @@
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 										</svg>
 									</div>
-									<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<a href="master-1.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 										<span class="f_08 light-gray">о мастере</span>
-									</button>
-									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									</a>
+									<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 										<span class="f_08">Записаться</span>
 									</button>
 								</div>
@@ -211,8 +179,8 @@
 							<div class="master">
 								<img src="img/team/5.png">
 								<div class="p-2 p-md-4">
-									<div class="font-2 f_12 fw_6 mb-md-2">Максим</div>
-									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+									<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-2.html">Руслан Петров</a></div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, стилист</div>
 									<div class="rating justify-content-center mb-2 mb-md-3">
 										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -230,10 +198,10 @@
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 										</svg>
 									</div>
-									<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<a href="master-2.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 										<span class="f_08 light-gray">о мастере</span>
-									</button>
-									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									</a>
+									<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 										<span class="f_08">Записаться</span>
 									</button>
 								</div>
@@ -243,8 +211,8 @@
 							<div class="master">
 								<img src="img/team/1.png">
 								<div class="p-2 p-md-4">
-									<div class="font-2 f_12 fw_6 mb-md-2"><a href="#">Елена</a></div>
-									<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
+									<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-3.html">Наталья Ворон</a></div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Топ - стилист,колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
 									<div class="rating justify-content-center mb-2 mb-md-3">
 										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -262,10 +230,42 @@
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 										</svg>
 									</div>
-									<a href="#" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<a href="master-3.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 										<span class="f_08 light-gray">о мастере</span>
 									</a>
-									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
+										<span class="f_08">Записаться</span>
+									</button>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="master">
+								<img src="img/team/2.png">
+								<div class="p-2 p-md-4">
+									<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-4.html">Алсу Залялутдинова</a></div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Стилист, коллорист, мастер униварсал по женским и мужским стрижкам</div>
+									<div class="rating justify-content-center mb-2 mb-md-3">
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+									</div>
+									<a href="master-4.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+										<span class="f_08 light-gray">о мастере</span>
+									</a>
+									<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 										<span class="f_08">Записаться</span>
 									</button>
 								</div>
@@ -275,8 +275,8 @@
 							<div class="master">
 								<img src="img/team/4.png">
 								<div class="p-2 p-md-4">
-									<div class="font-2 f_12 fw_6 mb-md-2">Анастасия</div>
-									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
+									<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-5.html">Эльсия</a></div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Стилист, коллорист, женский мастер</div>
 									<div class="rating justify-content-center mb-2 mb-md-3">
 										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -294,10 +294,10 @@
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 										</svg>
 									</div>
-									<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<a href="master-5.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 										<span class="f_08 light-gray">о мастере</span>
-									</button>
-									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									</a>
+									<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 										<span class="f_08">Записаться</span>
 									</button>
 								</div>
@@ -305,10 +305,10 @@
 						</div>
 						<div class="swiper-slide">
 							<div class="master">
-								<img src="img/team/5.png">
+								<img src="img/team/3.png">
 								<div class="p-2 p-md-4">
-									<div class="font-2 f_12 fw_6 mb-md-2">Максим</div>
-									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+									<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-6.html">Екатерина Рыбак</a></div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Мастер ногтевого сервиса</div>
 									<div class="rating justify-content-center mb-2 mb-md-3">
 										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -326,10 +326,10 @@
 											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 										</svg>
 									</div>
-									<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<a href="master-6.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 										<span class="f_08 light-gray">о мастере</span>
-									</button>
-									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									</a>
+									<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 										<span class="f_08">Записаться</span>
 									</button>
 								</div>
@@ -428,7 +428,7 @@
 				</svg>
 				<div>Главная</div>									
 			</a>
-			<a href="">
+			<a href="" role="button" data-bs-toggle="modal" data-bs-target="#callback">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M19.2083 3.87504H15.2025C14.8 2.76337 13.7458 1.95837 12.5 1.95837C11.2542 1.95837 10.2 2.76337 9.7975 3.87504H5.79167C4.7375 3.87504 3.875 4.73754 3.875 5.79171V21.125C3.875 22.1792 4.7375 23.0417 5.79167 23.0417H19.2083C20.2625 23.0417 21.125 22.1792 21.125 21.125V5.79171C21.125 4.73754 20.2625 3.87504 19.2083 3.87504ZM12.5 3.87504C13.0271 3.87504 13.4583 4.30629 13.4583 4.83337C13.4583 5.36046 13.0271 5.79171 12.5 5.79171C11.9729 5.79171 11.5417 5.36046 11.5417 4.83337C11.5417 4.30629 11.9729 3.87504 12.5 3.87504ZM19.2083 21.125H5.79167V5.79171H7.70833V8.66671H17.2917V5.79171H19.2083V21.125Z"/>
 				</svg>
@@ -455,6 +455,7 @@
 		</div>
 	</footer>
 
+	<!-- mobile menu -->
 	<div class="offcanvas offcanvas-start" tabindex="-1" id="burger-menu">
 		<div class="offcanvas-body">
 			<button type="button" class="btn-close" data-bs-dismiss="offcanvas">
@@ -463,12 +464,14 @@
 					<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
 				</svg>
 			</button>
-			<div>
+			<div class="box">
 				<h3 class="white text-center text-sm-start mb-5">Меню</h3>
 				<nav class="main-menu">
 					<ul>
 						<li><a href="index.html">Главная</a></li>
-						<li><a href="">Запись</a></li>
+						<li>
+							<a href="" role="button" data-bs-dismiss="offcanvas" data-bs-toggle="modal" data-bs-target="#callback">Запись</a>
+						</li>
 						<li><a href="services.html">Услуги</a></li>
 						<li><a href="offers.html">Акции</a></li>
 						<li><a href="catalog.html">каталог</a></li>
@@ -477,6 +480,33 @@
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
+			</div>
+		</div>
+	</div>
+
+	<!-- callback simple -->
+	<div class="modal fade" id="callback" tabindex="-1" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="box">
+					<form action="">
+						<h4>Онлайн запись</h4>
+						<input type="text" placeholder="Имя" class="w-100 mb-3">
+						<input type="text" placeholder="Номер телефона" class="w-100 mb-3">
+						<textarea name="" rows="3" placeholder="Комментарий" class="w-100 mb-4"></textarea>
+						<div class="d-flex mb-4">
+							<input type="checkbox" id="consent" class="me-3">
+							<label for="consent" class="f_08">Согласие на обработку персональных данных</label>
+						</div>
+						<button type="submit" class="btn_main btn_1 mx-auto">Отправить</button>
+					</form>
+				</div>
+				<button type="button" class="btn-close" data-bs-dismiss="modal">
+					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
+						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
+					</svg>
+				</button>
 			</div>
 		</div>
 	</div>
