--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 				</svg>
 				<div>Главная</div>									
 			</a>
-			<a href="" role="button" data-bs-toggle="modal" data-bs-target="#booking">
+			<a href="" role="button" data-bs-toggle="modal" data-bs-target="#callback">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M19.2083 3.87504H15.2025C14.8 2.76337 13.7458 1.95837 12.5 1.95837C11.2542 1.95837 10.2 2.76337 9.7975 3.87504H5.79167C4.7375 3.87504 3.875 4.73754 3.875 5.79171V21.125C3.875 22.1792 4.7375 23.0417 5.79167 23.0417H19.2083C20.2625 23.0417 21.125 22.1792 21.125 21.125V5.79171C21.125 4.73754 20.2625 3.87504 19.2083 3.87504ZM12.5 3.87504C13.0271 3.87504 13.4583 4.30629 13.4583 4.83337C13.4583 5.36046 13.0271 5.79171 12.5 5.79171C11.9729 5.79171 11.5417 5.36046 11.5417 4.83337C11.5417 4.30629 11.9729 3.87504 12.5 3.87504ZM19.2083 21.125H5.79167V5.79171H7.70833V8.66671H17.2917V5.79171H19.2083V21.125Z"/>
 				</svg>
@@ -615,7 +615,7 @@
 					<ul>
 						<li><a href="index.html">Главная</a></li>
 						<li>
-							<a href="" role="button" data-bs-dismiss="offcanvas" data-bs-toggle="modal" data-bs-target="#booking">Запись</a>
+							<a href="" role="button" data-bs-dismiss="offcanvas" data-bs-toggle="modal" data-bs-target="#callback">Запись</a>
 						</li>
 						<li><a href="services.html">Услуги</a></li>
 						<li><a href="offers.html">Акции</a></li>
