--- a/master-6.html
+++ b/master-6.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Status - Команда - Максим Жданов</title>
+	<title>Status - Команда - Екатерина Рыбак</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -63,7 +63,7 @@
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="index.html">Главная</a></li>
 					<li class="breadcrumb-item"><a href="team.html">Команда</a></li>
-					<li class="breadcrumb-item"><a href="master-1.html">Максим Жданов</a></li>
+					<li class="breadcrumb-item"><a href="master-6.html">Екатерина Рыбак</a></li>
 				</ol>
 			</nav>
 		</div>
@@ -72,7 +72,7 @@
 			<div class="container master-page">
 				<div class="row mb-5">
 					<div class="col-md-4">
-						<img src="img/team/5.png" alt="Максим Жданов" class="photo">
+						<img src="img/team/3.png" alt="Екатерина Рыбак" class="photo">
 						<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_1 mt-4 mx-auto">
 							<span class="f_09">Записаться</span>
 						</button>
@@ -80,8 +80,8 @@
 					<div class="col-md-8">
 						<div class="d-sm-flex justify-content-between align-items-center">
 							<div>
-								<h1 class="inner text-start mb-2">Максим Жданов</h1>
-								<div class="font-2 accent mb-1">Парикмахер, коллорист</div>
+								<h1 class="inner text-start mb-2">Екатерина Рыбак</h1>
+								<div class="font-2 accent mb-1">Мастер ногтевого сервиса</div>
 								<div class="font-2 lightest-gray">Стаж работы 5 лет</div>
 							</div>
 							<div>
@@ -105,7 +105,7 @@
 							</div>
 						</div>
 						<div class="light-gray mt-4">
-							<p>Занимается только окрашиваниями. В его активе — мастерское владение многочисленными техниками окрашивания. Умеет подбирать цвета и оттенки так, чтобы они не только дополняли друг друга, но и идеально сочетались с основной тональностью натуральных волос.</p>
+							<p>Опыт работы более 10-ти лет. Имеет сертификат двойного образца (Россия-Америка). Постоянно повышает квалификацию, обучаясь на курсах подологии.</p>
 						</div>
 						<div class="fw_7 f_12 mt-4">Повышение квалификации:</div>
 						<ul class="light-gray mt-4">
