--- a/product.html
+++ b/product.html
@@ -387,13 +387,13 @@
 
 	<footer class="d-block d-md-none mobile">
 		<div class="container h-100 d-flex justify-content-around align-items-center">
-			<a href="index.html">
+			<a href="index.html" class="active">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M13.9999 7.22171L19.8333 12.4717V21.5834H17.4999V14.5834H10.4999V21.5834H8.16659V12.4717L13.9999 7.22171ZM13.9999 4.08337L2.33325 14.5834H5.83325V23.9167H12.8333V16.9167H15.1666V23.9167H22.1666V14.5834H25.6666L13.9999 4.08337Z"/>
 				</svg>
 				<div>Главная</div>									
 			</a>
-			<a href="">
+			<a href="" role="button" data-bs-toggle="modal" data-bs-target="#callback">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M19.2083 3.87504H15.2025C14.8 2.76337 13.7458 1.95837 12.5 1.95837C11.2542 1.95837 10.2 2.76337 9.7975 3.87504H5.79167C4.7375 3.87504 3.875 4.73754 3.875 5.79171V21.125C3.875 22.1792 4.7375 23.0417 5.79167 23.0417H19.2083C20.2625 23.0417 21.125 22.1792 21.125 21.125V5.79171C21.125 4.73754 20.2625 3.87504 19.2083 3.87504ZM12.5 3.87504C13.0271 3.87504 13.4583 4.30629 13.4583 4.83337C13.4583 5.36046 13.0271 5.79171 12.5 5.79171C11.9729 5.79171 11.5417 5.36046 11.5417 4.83337C11.5417 4.30629 11.9729 3.87504 12.5 3.87504ZM19.2083 21.125H5.79167V5.79171H7.70833V8.66671H17.2917V5.79171H19.2083V21.125Z"/>
 				</svg>
@@ -405,7 +405,7 @@
 				</svg>
 				<div>Услуги</div>				
 			</a>
-			<a href="catalog.html" class="active">
+			<a href="catalog.html">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M7 8.5H2V6.5H7V8.5ZM7 11.5H2V13.5H7V11.5ZM20.59 18.5L16.76 14.67C15.96 15.19 15.02 15.5 14 15.5C11.24 15.5 9 13.26 9 10.5C9 7.74 11.24 5.5 14 5.5C16.76 5.5 19 7.74 19 10.5C19 11.52 18.69 12.46 18.17 13.25L22 17.09L20.59 18.5ZM17 10.5C17 8.85 15.65 7.5 14 7.5C12.35 7.5 11 8.85 11 10.5C11 12.15 12.35 13.5 14 13.5C15.65 13.5 17 12.15 17 10.5ZM2 18.5H12V16.5H2V18.5Z"/>
 				</svg>
@@ -420,6 +420,7 @@
 		</div>
 	</footer>
 
+	<!-- mobile menu -->
 	<div class="offcanvas offcanvas-start" tabindex="-1" id="burger-menu">
 		<div class="offcanvas-body">
 			<button type="button" class="btn-close" data-bs-dismiss="offcanvas">
@@ -428,12 +429,14 @@
 					<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
 				</svg>
 			</button>
-			<div>
+			<div class="box">
 				<h3 class="white text-center text-sm-start mb-5">Меню</h3>
 				<nav class="main-menu">
 					<ul>
 						<li><a href="index.html">Главная</a></li>
-						<li><a href="">Запись</a></li>
+						<li>
+							<a href="" role="button" data-bs-dismiss="offcanvas" data-bs-toggle="modal" data-bs-target="#callback">Запись</a>
+						</li>
 						<li><a href="services.html">Услуги</a></li>
 						<li><a href="offers.html">Акции</a></li>
 						<li><a href="catalog.html">каталог</a></li>
@@ -442,6 +445,33 @@
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
+			</div>
+		</div>
+	</div>
+
+	<!-- callback simple -->
+	<div class="modal fade" id="callback" tabindex="-1" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="box">
+					<form action="">
+						<h4>Онлайн запись</h4>
+						<input type="text" placeholder="Имя" class="w-100 mb-3">
+						<input type="text" placeholder="Номер телефона" class="w-100 mb-3">
+						<textarea name="" rows="3" placeholder="Комментарий" class="w-100 mb-4"></textarea>
+						<div class="d-flex mb-4">
+							<input type="checkbox" id="consent" class="me-3">
+							<label for="consent" class="f_08">Согласие на обработку персональных данных</label>
+						</div>
+						<button type="submit" class="btn_main btn_1 mx-auto">Отправить</button>
+					</form>
+				</div>
+				<button type="button" class="btn-close" data-bs-dismiss="modal">
+					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
+						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
+					</svg>
+				</button>
 			</div>
 		</div>
 	</div>
