--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
 	</header>
 
 	<section id="sec-1" class="mb_4">
-		<div class="container">
+		<img src="img/bg/bg1.jpg" alt="" class="sec-1-bg">
+		<div class="container position-relative">
 			<div class="row align-items-center">
 				<div class="col-7 col-sm-6 col-lg-5 col-xl-4">
-					<h1>Студия красоты</h1>
-					<div>Команда профессионалов для создания Вашего совешенного образа</div>
+					<h1 class="white">Студия красоты</h1>
+					<div class="white">Команда профессионалов для создания Вашего совешенного образа</div>
 					<a href="about.html" class="btn_main btn_1 mt-4 mt-md-5"><span class="f_09">Подробнее</span></a>
 				</div>
 			</div>
@@ -207,44 +208,44 @@
 					<div class="d-none d-lg-flex row row-cols-3 gy-4 gy-xl-5 mb-4 mb-xl-5">
 						<div>
 							<div class="employee-preview">
-								<img src="img/team/1.png" alt="Альфия" class="mb-2">
-								<div class="f_12 dark-gray fw_6 mb-1">Альфия</div>
-								<div class="light-gray f_09">Мастер ногтевого сервиса</div>
-							</div>
-						</div>
-						<div>
-							<div class="employee-preview">
-								<img src="img/team/2.png" alt="Ольга" class="mb-2">
-								<div class="f_12 dark-gray fw_6 mb-1">Ольга</div>
-								<div class="light-gray f_09">Мастер ногтевого сервиса</div>
-							</div>
-						</div>
-						<div>
-							<div class="employee-preview active">
-								<img src="img/team/3.png" alt="Мария" class="mb-2">
-								<div class="f_12 dark-gray fw_6 mb-1">Мария</div>
-								<div class="light-gray f_09">Мастер бровист</div>
-							</div>
-						</div>
-						<div>
-							<div class="employee-preview">
-								<img src="img/team/4.png" alt="Анастасия" class="mb-2">
-								<div class="f_12 dark-gray fw_6 mb-1">Анастасия</div>
+								<img src="img/team/5.png" alt="Максим Жданов" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Максим Жданов</div>
 								<div class="light-gray f_09">Парикмахер, коллорист</div>
 							</div>
 						</div>
 						<div>
 							<div class="employee-preview">
-								<img src="img/team/5.png" alt="Максим" class="mb-2">
-								<div class="f_12 dark-gray fw_6 mb-1">Максим</div>
-								<div class="light-gray f_09">Парикмахер</div>
+								<img src="img/team/5.png" alt="Руслан Петров" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Руслан Петров</div>
+								<div class="light-gray f_09">Парикмахер, стилист</div>
+							</div>
+						</div>
+						<div>
+							<div class="employee-preview active">
+								<img src="img/team/natalia.jpg" alt="Наталья Ворон" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Наталья Ворон</div>
+								<div class="light-gray f_09">Топ - стилист, колорист, универсал, эстетический - трихолог.</div>
 							</div>
 						</div>
 						<div>
 							<div class="employee-preview">
-								<img src="img/team/6.png" alt="Виктория" class="mb-2">
-								<div class="f_12 dark-gray fw_6 mb-1">Виктория</div>
-								<div class="light-gray f_09">Косметолог</div>
+								<img src="img/team/alsu.jpg" alt="Алсу Залялутдинова" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Алсу Залялутдинова</div>
+								<div class="light-gray f_09">Стилист, коллорист, мастер униварсал по женским и мужским стрижкам</div>
+							</div>
+						</div>
+						<div>
+							<div class="employee-preview">
+								<img src="img/team/elfia.jpg" alt="Эльсия" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Эльсия</div>
+								<div class="light-gray f_09">Стилист, коллорист, женский мастер</div>
+							</div>
+						</div>
+						<div>
+							<div class="employee-preview">
+								<img src="img/team/ekaterina.jpg" alt="Екатерина Рыбак" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Екатерина Рыбак</div>
+								<div class="light-gray f_09">Мастер ногтевого сервиса</div>
 							</div>
 						</div>
 					</div>
@@ -300,12 +301,12 @@
 					<div class="employee pt-4 pt-lg-0 mb-4 mb-lg-5 mb-lg-0">
 						<div class="row row-cols-2 gx-2 gx-sm-4">
 							<div>
-								<img src="img/team/3.png" alt="Мария">
+								<img src="img/team/natalia.jpg" alt="Наталья Ворон">
 							</div>
 							<div>
-								<div class="f_15 font-2 dark-gray fw_6 mb-1">Мария</div>
-								<div class="f_12 font-2 dark-gray mb-1">Мастер бровист</div>
-								<div class="f_12 font-2 dark-gray">Стаж работы 5 лет</div>
+								<div class="f_15 font-2 dark-gray fw_6 mb-1">Наталья Ворон</div>
+								<div class="f_12 font-2 dark-gray mb-1">Топ - стилист, колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
+								<div class="f_12 font-2 dark-gray">Стаж работы 10 лет</div>
 								<div class="rating mt-2 mt-sm-4">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -323,7 +324,7 @@
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 									</svg>
 								</div>
-								<div class="text mt-2 mt-sm-4">Короткое описание мастера, регалии, сертификаты и предоставляеммые услуги</div>
+								<div class="text mt-2 mt-sm-4">Опыт работы более 10-и лет, постоянное повышение квалификации. Обучение Казахстан, Новосибирск, Москва, Итальянская школа ALDO COPPOLA. Выполнение любых сложных работ как в стрижках, так и в окрашиваниях, выход из черного цвета в светлый тон без ломкости волос.</div>
 							</div>
 							<div class="mt-xl-5">
 								<button type="button" class="btn_main btn_2 mx-auto mt-3 mt-sm-4 mt-lg-5"><span class="f_09">Подробнее</span></button>
@@ -837,7 +838,7 @@
 					<form action="">
 						<div id="quiz-slider" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="false" data-bs-wrap="false">
 							<div class="carousel-inner">
-								<div class="carousel-item active">
+								<fildset class="carousel-item active">
 									<div class="indicators mb-4"></div>
 									<div class="font-2 text-center f_15 mb-3">Шаг 1</div>
 									<div class="font-2 f_14 fw_5 text-center mb-4 mb-sm-5">Пришлите один или несколько  фотопотретов в дневном освещении</div>
@@ -855,8 +856,8 @@
 									</div>
 									<button type="button" class="btn_main btn_1 mx-auto mt-3 mt-sm-5" data-bs-target="#quiz-slider" data-bs-slide="next"><span class="f_09">следующий шаг</span></button>
 									<div class="text-center f_09 light-gray mt-3">*Ваши фото будет удалены сразу после анализа</div>
-								</div>
-								<div class="carousel-item">
+								</fildset>
+								<fildset class="carousel-item">
 									<div class="indicators mb-4"></div>
 									<div class="font-2 text-center f_15 mb-3">Шаг 2</div>
 									<div class="font-2 f_14 fw_5 text-center mb-4 mb-sm-5">Ответьте на несколько вопросов</div>
@@ -895,8 +896,8 @@
 											</div>
 										</div>
 									</div>
-								</div>
-								<div class="carousel-item">
+								</fildset>
+								<fildset class="carousel-item">
 									<div class="indicators mb-4"></div>
 									<div class="font-2 text-center f_15 mb-3">Шаг 3</div>
 									<div class="font-2 f_14 fw_5 text-center mb-1">Оставьте Ваши контактные данные</div>
@@ -911,7 +912,7 @@
 											<div class="text-center f_09 light-gray mt-3">Нажимая “Готово”, Вы соглашаетесь условиями с обработки персональных данных</div>
 										</div>
 									</div>
-								</div>
+								</fildset>
 							</div>
 						</div>
 					</form>
