--- a/master-3.html
+++ b/master-3.html
@@ -72,7 +72,7 @@
 			<div class="container master-page">
 				<div class="row mb-5">
 					<div class="col-md-4">
-						<img src="img/team/1.png" alt="Наталья Ворон" class="photo">
+						<img src="img/team/natalia.jpg" alt="Наталья Ворон" class="photo">
 						<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_1 mt-4 mx-auto">
 							<span class="f_09">Записаться</span>
 						</button>
