--- a/team.html
+++ b/team.html
@@ -137,10 +137,10 @@
 					</div>
 					<div>
 						<div class="master">
-							<img src="img/team/1.png">
+							<img src="img/team/natalia.jpg">
 							<div class="p-2 p-md-4">
 								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-3.html">Наталья Ворон</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Топ - стилист,колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Топ - стилист, колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
 								<div class="rating justify-content-center mb-2 mb-md-3">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -169,7 +169,7 @@
 					</div>
 					<div>
 						<div class="master">
-							<img src="img/team/2.png">
+							<img src="img/team/alsu.jpg">
 							<div class="p-2 p-md-4">
 								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-4.html">Алсу Залялутдинова</a></div>
 								<div class="font-2 f_09 mb-2 mb-md-3">Стилист, коллорист, мастер униварсал по женским и мужским стрижкам</div>
@@ -201,7 +201,7 @@
 					</div>
 					<div>
 						<div class="master">
-							<img src="img/team/4.png">
+							<img src="img/team/elfia.jpg">
 							<div class="p-2 p-md-4">
 								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-5.html">Эльсия</a></div>
 								<div class="font-2 f_09 mb-2 mb-md-3">Стилист, коллорист, женский мастер</div>
@@ -233,7 +233,7 @@
 					</div>
 					<div>
 						<div class="master">
-							<img src="img/team/3.png">
+							<img src="img/team/ekaterina.jpg">
 							<div class="p-2 p-md-4">
 								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-6.html">Екатерина Рыбак</a></div>
 								<div class="font-2 f_09 mb-2 mb-md-3">Мастер ногтевого сервиса</div>
